# Poke-Rogue-Vita

./: .gitignore  .gitmodules  CMakeLists.txt  export_presets.cfg  project.godot
Scenes/: MainGame.tscn
sce_sys/livearea/contents/: template.xml
src/: BGPanel.c  bgLocations.h  bgPanel.h  constants.h  main.c
